battleship/devops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: battleship-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: battleship
  template:
    metadata:
      labels:
        app: battleship
    spec:
      containers:
        - name: battleship
          image: ghcr.io/smiggiddy/odin-codeprojects/battleship:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: battleship-service
spec:
  type: LoadBalancer
  selector:
    app: battleship
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
